tests/fail/component_not_self_closing.rs
use gpui_markup::ui;

fn main() {
    // Should fail: components must be self-closing
    let _ = ui! {
        <Header>
        </Header>
    };
}
